[tool.poetry]
name = "navidrome-toolbox"
version = "0.1.0"
description = "Little helpers for Navidrome."
authors = ["David Trattnig <david@subsquare.at>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false
packages = [{include = "beetsplug", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
beets = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
