[tool.poetry]
name = "nd-toolbox"
version = "0.8.0"
description = "Little helpers for Navidrome."
authors = ["David Trattnig <david@subsquare.at>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
package-mode = false
packages = [
    { include = "beetsplug", from="src" },
    { include = "ndtools", from="src" },
]

[tool.poetry.dependencies]
beets = "^2.2.0"
python = "^3.12"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14.0"
jsonpickle = "^4.0.1"
colorlog = "^6.9.0"
tomli = "^2.2.1"
easydict = "^1.13"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
confuse = "^2.0.1"


[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
ruff = "^0.8.6"
pytest = "^8.3.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.8.5"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]
